@@ -7,28 +7,32 @@ function check(form_button)
 
     $(':input', form).each(function() {
         var class = $(this).attr('class');
-        if (class == 'input-required') {
+        if (class == 'input-required' && $(this).val() == '') {
             var type = this.type;
             switch(type) {
             case 'text':
-                if ($(this).val() == '') {
-                    element_id = $(this).attr('id');
-                    label_id = '#' + element_id + '-label';
-                    label_value = $(label_id).html();
-                    alert('Please fill out the field: ' + label_value);
-                    form_ok = false;
-                    return false;
-                }
+            case 'textarea':
+                element_id = $(this).attr('id');
+                label_id = '#' + element_id + '-label';
+                label_value = $(label_id).html();
+                alert('Please fill out the field: ' + label_value);
+                form_ok = false;
+                break;
+
+            default:
+                alert(type);
             }
+            return false;
         }
 
     });
-
+    
     if (!form_ok) {
         $(form).submit(function() {
             return false;
         });
     } else {
+    
         form.submit();
         return true;
     }
