@@ -1,0 +1,2 @@
+<a style="cursor : pointer" onmouseout="hide_slider('{id}')" onclick="slider('{id}'); return false">{link}</a>
+<span class="{class}" id="{id}">{message}</span>
