@@ -1,0 +1,22 @@
+<?php
+/**
+ * @version $Id$
+ * @author Matthew McNaney <mcnaney at gmail dot com>
+ */
+
+$default['class'] = 'js-slider';
+$default['id'] = 'span-' . mktime();
+$default['speed'] = 'fast';
+
+switch (@$data['speed']) {
+ case 'fast':
+ case 'normal':
+ case 'slow':
+     break;
+
+ default:
+     $data['speed'] = 'fast';
+     break;
+}
+
+?>
