@@ -1,0 +1,11 @@
+<style type="text/css">span.js-slider {display : none;position : absolute;background-color : white;border : 1px solid black; padding : 2px; width : 300px}</style>
+
+<script type="text/javascript">
+function slider(span_id) {
+    $('#' + span_id).slideToggle('{speed}');
+}
+
+function hide_slider(span_id) {
+    $('#' + span_id).hide();
+}
+</script>
